test: close test completeness review gaps